--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ os:
   - osx
 
 install:
-  - curl -L "https://github.com/kward/shunit2/archive/master.tar.gz" | tar zx
+  - curl -L "https://github.com/kward/shunit2/archive/master.tar.gz" | tar zxv
 
 script:
   - bash test.sh
